--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -1,3 +1,31 @@
 body {
-  background-color: rgb(0, 255, 0);
+  background-color: rgb(0, 230, 25);
+  margin-top: 100px;
+}
+
+h1 {
+  font-size: 76px !important;
+  font-weight: bold;
+}
+
+h2 {
+  font-size: 45px !important;
+}
+
+.main-panel {
+  background-color: #eee;
+  padding: 0 0 24px 0 !important;
+  border-radius: 6px;
+}
+
+.title {
+  color: white !important;
+  background-color: #555;
+  width: 100%;
+  padding: 8px 0;
+  border-radius: 6px 6px 0 0;
+}
+
+.time-display {
+  padding-bottom: 14px;
 }
