--- a/app/css/main.css
+++ b/app/css/main.css
@@ -3,25 +3,28 @@ body {
   margin-top: 100px; }
 
 h1 {
-  font-size: 76px !important;
-  font-weight: bold; }
+  font-size: 80px !important; }
 
 h2 {
-  font-size: 45px !important; }
+  font-size: 46px !important; }
 
 .main-panel {
-  background-color: #eee;
+  color: #222;
+  background-color: rgba(255, 255, 255, 0.375);
   padding: 0 0 24px 0 !important;
   border-radius: 6px; }
 
 .title {
-  color: white !important;
-  background-color: #555;
+  background-color: rgba(255, 255, 255, 0.225);
   width: 100%;
   padding: 8px 0;
   border-radius: 6px 6px 0 0; }
 
 .time-display {
   padding-bottom: 14px; }
+
+.btn-default {
+  background-color: rgba(255, 255, 255, 0.375) !important;
+  border: 1px solid rgba(20, 20, 20, 0.2); }
 
 /*# sourceMappingURL=main.css.map */
